<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select_menu_to_display"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/settingSelectMenu"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/settingMorningMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/breakfast" />

        <RadioButton
            android:id="@+id/settingNoonMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lunch" />

        <RadioButton
            android:id="@+id/settingEveningMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dinner" />

    </RadioGroup>

</LinearLayout>