<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sign_in_margin_rl"
        android:layout_marginTop="@dimen/sign_in_margin_rl"
        android:layout_marginRight="@dimen/sign_in_margin_rl"
        android:layout_marginBottom="@dimen/sign_in_margin_tb"
        android:text="@string/forgot_pass"
        android:textSize="@dimen/forgot_pass_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_margin_rl"
        android:text="@string/enter_registered_email"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sign_in_margin_rl"
        android:layout_marginTop="@dimen/sign_in_margin_tb"
        android:layout_marginRight="@dimen/sign_in_margin_rl"
        android:layout_marginBottom="@dimen/sign_in_margin_tb">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPassEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/forgotPassCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/forgotPassSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:text="@string/send" />

    </LinearLayout>

</LinearLayout>