<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="@dimen/sign_in_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="48dp"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_tb"
            android:text="@string/sign_up"
            android:textSize="@dimen/sign_in_text_size" />

        <TextView
            android:id="@+id/loginInSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="28dp"
            android:text="@string/old_user_sign_in_text"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpCompIDEditText"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:hint="@string/company_id" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpMobileNoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_tb">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpConfirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/loadingIV"
            android:layout_width="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="50dp"
            android:visibility="gone"
            android:src="@drawable/loading_circles"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fabSignUp"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/sign_in_margin_rl"
            android:layout_marginTop="@dimen/sign_in_margin_tb"
            android:layout_marginRight="@dimen/sign_in_margin_rl"
            android:layout_marginBottom="@dimen/sign_in_margin_rl"
            android:text="@string/sign_up"
            app:icon="@drawable/ic_outline_person_add_24px" />


    </LinearLayout>

</ScrollView>